// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-stats writes a file given a .graphql GraphQL schema 1`] = `
Object {
  "name": "Droid",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 2`] = `
Object {
  "name": "appearsIn",
  "parentType": "Droid",
  "type": "[Episode]!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 3`] = `
Object {
  "name": "friends",
  "parentType": "Droid",
  "type": "[Character]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 4`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Droid",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 5`] = `
Object {
  "name": "id",
  "parentType": "Droid",
  "type": "ID!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 6`] = `
Object {
  "name": "name",
  "parentType": "Droid",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 7`] = `
Object {
  "name": "primaryFunction",
  "parentType": "Droid",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 8`] = `
Object {
  "name": "FriendsConnection",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 9`] = `
Object {
  "name": "edges",
  "parentType": "FriendsConnection",
  "type": "[FriendsEdge]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 10`] = `
Object {
  "name": "friends",
  "parentType": "FriendsConnection",
  "type": "[Character]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 11`] = `
Object {
  "name": "pageInfo",
  "parentType": "FriendsConnection",
  "type": "PageInfo!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 12`] = `
Object {
  "name": "totalCount",
  "parentType": "FriendsConnection",
  "type": "Int",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 13`] = `
Object {
  "name": "FriendsEdge",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 14`] = `
Object {
  "name": "cursor",
  "parentType": "FriendsEdge",
  "type": "ID!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 15`] = `
Object {
  "name": "node",
  "parentType": "FriendsEdge",
  "type": "Character",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 16`] = `
Object {
  "name": "Human",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 17`] = `
Object {
  "name": "appearsIn",
  "parentType": "Human",
  "type": "[Episode]!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 18`] = `
Object {
  "name": "friends",
  "parentType": "Human",
  "type": "[Character]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 19`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Human",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 20`] = `
Object {
  "name": "height",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 21`] = `
Object {
  "name": "homePlanet",
  "parentType": "Human",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 22`] = `
Object {
  "name": "id",
  "parentType": "Human",
  "type": "ID!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 23`] = `
Object {
  "name": "mass",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 24`] = `
Object {
  "name": "name",
  "parentType": "Human",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 25`] = `
Object {
  "name": "starships",
  "parentType": "Human",
  "type": "[Starship]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 26`] = `
Object {
  "name": "Mutation",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 27`] = `
Object {
  "name": "createReview",
  "parentType": "Mutation",
  "type": "Review",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 28`] = `
Object {
  "name": "PageInfo",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 29`] = `
Object {
  "name": "endCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 30`] = `
Object {
  "name": "hasNextPage",
  "parentType": "PageInfo",
  "type": "Boolean!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 31`] = `
Object {
  "name": "startCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 32`] = `
Object {
  "name": "Query",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 33`] = `
Object {
  "name": "character",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 34`] = `
Object {
  "name": "droid",
  "parentType": "Query",
  "type": "Droid",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 35`] = `
Object {
  "name": "hero",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 36`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-stats\\\\/tree\\\\/\\.\\*\\\\\\.js#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 37`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-stats\\\\/tree\\\\/\\.\\*\\\\\\.js#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 38`] = `
Object {
  "name": "human",
  "parentType": "Query",
  "type": "Human",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 39`] = `
Object {
  "name": "reviews",
  "parentType": "Query",
  "type": "[Review]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 40`] = `
Object {
  "name": "search",
  "parentType": "Query",
  "type": "[SearchResult]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 41`] = `
Object {
  "name": "starship",
  "parentType": "Query",
  "type": "Starship",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 42`] = `
Object {
  "name": "Review",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 43`] = `
Object {
  "name": "commentary",
  "parentType": "Review",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 44`] = `
Object {
  "name": "stars",
  "parentType": "Review",
  "type": "Int!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 45`] = `
Object {
  "name": "Starship",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 46`] = `
Object {
  "name": "coordinates",
  "parentType": "Starship",
  "type": "[[Float!]!]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 47`] = `
Object {
  "name": "id",
  "parentType": "Starship",
  "type": "ID!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 48`] = `
Object {
  "name": "length",
  "parentType": "Starship",
  "type": "Float",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 49`] = `
Object {
  "name": "name",
  "parentType": "Starship",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 50`] = `
Object {
  "name": "__Directive",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 51`] = `
Object {
  "name": "args",
  "parentType": "__Directive",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 52`] = `
Object {
  "name": "description",
  "parentType": "__Directive",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 53`] = `
Object {
  "name": "locations",
  "parentType": "__Directive",
  "type": "[__DirectiveLocation!]!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 54`] = `
Object {
  "name": "name",
  "parentType": "__Directive",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 55`] = `
Object {
  "name": "__EnumValue",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 56`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 57`] = `
Object {
  "name": "description",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 58`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__EnumValue",
  "type": "Boolean!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 59`] = `
Object {
  "name": "name",
  "parentType": "__EnumValue",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 60`] = `
Object {
  "name": "__Field",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 61`] = `
Object {
  "name": "args",
  "parentType": "__Field",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 62`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 63`] = `
Object {
  "name": "description",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 64`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__Field",
  "type": "Boolean!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 65`] = `
Object {
  "name": "name",
  "parentType": "__Field",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 66`] = `
Object {
  "name": "type",
  "parentType": "__Field",
  "type": "__Type!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 67`] = `
Object {
  "name": "__InputValue",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 68`] = `
Object {
  "name": "defaultValue",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 69`] = `
Object {
  "name": "description",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 70`] = `
Object {
  "name": "name",
  "parentType": "__InputValue",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 71`] = `
Object {
  "name": "type",
  "parentType": "__InputValue",
  "type": "__Type!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 72`] = `
Object {
  "name": "__Schema",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 73`] = `
Object {
  "name": "directives",
  "parentType": "__Schema",
  "type": "[__Directive!]!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 74`] = `
Object {
  "name": "mutationType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 75`] = `
Object {
  "name": "queryType",
  "parentType": "__Schema",
  "type": "__Type!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 76`] = `
Object {
  "name": "subscriptionType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 77`] = `
Object {
  "name": "types",
  "parentType": "__Schema",
  "type": "[__Type!]!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 78`] = `
Object {
  "name": "__Type",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 79`] = `
Object {
  "name": "description",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 80`] = `
Object {
  "name": "enumValues",
  "parentType": "__Type",
  "type": "[__EnumValue!]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 81`] = `
Object {
  "name": "fields",
  "parentType": "__Type",
  "type": "[__Field!]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 82`] = `
Object {
  "name": "inputFields",
  "parentType": "__Type",
  "type": "[__InputValue!]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 83`] = `
Object {
  "name": "interfaces",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 84`] = `
Object {
  "name": "kind",
  "parentType": "__Type",
  "type": "__TypeKind!",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 85`] = `
Object {
  "name": "name",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 86`] = `
Object {
  "name": "ofType",
  "parentType": "__Type",
  "type": "__Type",
}
`;

exports[`graphql-stats writes a file given a .graphql GraphQL schema 87`] = `
Object {
  "name": "possibleTypes",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 1`] = `
Object {
  "name": "Droid",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 2`] = `
Object {
  "name": "appearsIn",
  "parentType": "Droid",
  "type": "[Episode]!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 3`] = `
Object {
  "name": "friends",
  "parentType": "Droid",
  "type": "[Character]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 4`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Droid",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 5`] = `
Object {
  "name": "id",
  "parentType": "Droid",
  "type": "ID!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 6`] = `
Object {
  "name": "name",
  "parentType": "Droid",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 7`] = `
Object {
  "name": "primaryFunction",
  "parentType": "Droid",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 8`] = `
Object {
  "name": "FriendsConnection",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 9`] = `
Object {
  "name": "edges",
  "parentType": "FriendsConnection",
  "type": "[FriendsEdge]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 10`] = `
Object {
  "name": "friends",
  "parentType": "FriendsConnection",
  "type": "[Character]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 11`] = `
Object {
  "name": "pageInfo",
  "parentType": "FriendsConnection",
  "type": "PageInfo!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 12`] = `
Object {
  "name": "totalCount",
  "parentType": "FriendsConnection",
  "type": "Int",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 13`] = `
Object {
  "name": "FriendsEdge",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 14`] = `
Object {
  "name": "cursor",
  "parentType": "FriendsEdge",
  "type": "ID!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 15`] = `
Object {
  "name": "node",
  "parentType": "FriendsEdge",
  "type": "Character",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 16`] = `
Object {
  "name": "Human",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 17`] = `
Object {
  "name": "appearsIn",
  "parentType": "Human",
  "type": "[Episode]!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 18`] = `
Object {
  "name": "friends",
  "parentType": "Human",
  "type": "[Character]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 19`] = `
Object {
  "name": "friendsConnection",
  "parentType": "Human",
  "type": "FriendsConnection!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 20`] = `
Object {
  "name": "height",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 21`] = `
Object {
  "name": "homePlanet",
  "parentType": "Human",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 22`] = `
Object {
  "name": "id",
  "parentType": "Human",
  "type": "ID!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 23`] = `
Object {
  "name": "mass",
  "parentType": "Human",
  "type": "Float",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 24`] = `
Object {
  "name": "name",
  "parentType": "Human",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 25`] = `
Object {
  "name": "starships",
  "parentType": "Human",
  "type": "[Starship]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 26`] = `
Object {
  "name": "Mutation",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 27`] = `
Object {
  "name": "createReview",
  "parentType": "Mutation",
  "type": "Review",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 28`] = `
Object {
  "name": "PageInfo",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 29`] = `
Object {
  "name": "endCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 30`] = `
Object {
  "name": "hasNextPage",
  "parentType": "PageInfo",
  "type": "Boolean!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 31`] = `
Object {
  "name": "startCursor",
  "parentType": "PageInfo",
  "type": "ID",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 32`] = `
Object {
  "name": "Query",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 33`] = `
Object {
  "name": "character",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 34`] = `
Object {
  "name": "droid",
  "parentType": "Query",
  "type": "Droid",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 35`] = `
Object {
  "name": "hero",
  "parentType": "Query",
  "type": "Character",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 36`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-stats\\\\/tree\\\\/\\.\\*\\\\\\.js#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 37`] = `
Object {
  "filename": StringMatching /\\^https:\\\\/\\\\/github\\.com\\\\/CDThomas\\\\/graphql-stats\\\\/tree\\\\/\\.\\*\\\\\\.js#L\\\\d\\$/,
  "rootNodeName": "findGraphQLTagsQuery",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 38`] = `
Object {
  "name": "human",
  "parentType": "Query",
  "type": "Human",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 39`] = `
Object {
  "name": "reviews",
  "parentType": "Query",
  "type": "[Review]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 40`] = `
Object {
  "name": "search",
  "parentType": "Query",
  "type": "[SearchResult]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 41`] = `
Object {
  "name": "starship",
  "parentType": "Query",
  "type": "Starship",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 42`] = `
Object {
  "name": "Review",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 43`] = `
Object {
  "name": "commentary",
  "parentType": "Review",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 44`] = `
Object {
  "name": "stars",
  "parentType": "Review",
  "type": "Int!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 45`] = `
Object {
  "name": "Starship",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 46`] = `
Object {
  "name": "coordinates",
  "parentType": "Starship",
  "type": "[[Float!]!]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 47`] = `
Object {
  "name": "id",
  "parentType": "Starship",
  "type": "ID!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 48`] = `
Object {
  "name": "length",
  "parentType": "Starship",
  "type": "Float",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 49`] = `
Object {
  "name": "name",
  "parentType": "Starship",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 50`] = `
Object {
  "name": "__Directive",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 51`] = `
Object {
  "name": "args",
  "parentType": "__Directive",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 52`] = `
Object {
  "name": "description",
  "parentType": "__Directive",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 53`] = `
Object {
  "name": "locations",
  "parentType": "__Directive",
  "type": "[__DirectiveLocation!]!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 54`] = `
Object {
  "name": "name",
  "parentType": "__Directive",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 55`] = `
Object {
  "name": "__EnumValue",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 56`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 57`] = `
Object {
  "name": "description",
  "parentType": "__EnumValue",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 58`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__EnumValue",
  "type": "Boolean!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 59`] = `
Object {
  "name": "name",
  "parentType": "__EnumValue",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 60`] = `
Object {
  "name": "__Field",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 61`] = `
Object {
  "name": "args",
  "parentType": "__Field",
  "type": "[__InputValue!]!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 62`] = `
Object {
  "name": "deprecationReason",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 63`] = `
Object {
  "name": "description",
  "parentType": "__Field",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 64`] = `
Object {
  "name": "isDeprecated",
  "parentType": "__Field",
  "type": "Boolean!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 65`] = `
Object {
  "name": "name",
  "parentType": "__Field",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 66`] = `
Object {
  "name": "type",
  "parentType": "__Field",
  "type": "__Type!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 67`] = `
Object {
  "name": "__InputValue",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 68`] = `
Object {
  "name": "defaultValue",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 69`] = `
Object {
  "name": "description",
  "parentType": "__InputValue",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 70`] = `
Object {
  "name": "name",
  "parentType": "__InputValue",
  "type": "String!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 71`] = `
Object {
  "name": "type",
  "parentType": "__InputValue",
  "type": "__Type!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 72`] = `
Object {
  "name": "__Schema",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 73`] = `
Object {
  "name": "directives",
  "parentType": "__Schema",
  "type": "[__Directive!]!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 74`] = `
Object {
  "name": "mutationType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 75`] = `
Object {
  "name": "queryType",
  "parentType": "__Schema",
  "type": "__Type!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 76`] = `
Object {
  "name": "subscriptionType",
  "parentType": "__Schema",
  "type": "__Type",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 77`] = `
Object {
  "name": "types",
  "parentType": "__Schema",
  "type": "[__Type!]!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 78`] = `
Object {
  "name": "__Type",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 79`] = `
Object {
  "name": "description",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 80`] = `
Object {
  "name": "enumValues",
  "parentType": "__Type",
  "type": "[__EnumValue!]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 81`] = `
Object {
  "name": "fields",
  "parentType": "__Type",
  "type": "[__Field!]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 82`] = `
Object {
  "name": "inputFields",
  "parentType": "__Type",
  "type": "[__InputValue!]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 83`] = `
Object {
  "name": "interfaces",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 84`] = `
Object {
  "name": "kind",
  "parentType": "__Type",
  "type": "__TypeKind!",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 85`] = `
Object {
  "name": "name",
  "parentType": "__Type",
  "type": "String",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 86`] = `
Object {
  "name": "ofType",
  "parentType": "__Type",
  "type": "__Type",
}
`;

exports[`graphql-stats writes a file given a .json GraphQL schema 87`] = `
Object {
  "name": "possibleTypes",
  "parentType": "__Type",
  "type": "[__Type!]",
}
`;
